--- a/src/components/global.css
+++ b/src/components/global.css
@@ -16,22 +16,23 @@
   text-decoration: none;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
-  background: black;
 }
 body {
-  background: black;
 }
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  scrollbar-width: none;
 }
 
 html::-webkit-scrollbar {
   width: 1rem;
+  display: none;
 }
 
 html::-webkit-scrollbar-track {
-  background: #0d0d0d;
+  background: inherit;
+  color: inherit;
 }
 
 html::-webkit-scrollbar-thumb {
@@ -49,6 +50,7 @@ html::-webkit-scrollbar-thumb {
   outline: none;
   padding: 0.7rem 2rem;
   border-radius: 20px;
+  color: inherit;
 }
 
 .btn-main {
@@ -69,7 +71,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #fff;
 
   padding: 1rem 0rem;
 }
@@ -78,17 +79,49 @@ nav {
   display: flex;
   align-items: center;
   font-weight: 700;
+  color: inherit;
 }
 
 .mail-icon {
   height: 45px;
   width: 45px;
   border-radius: 50%;
-  border: 1px solid #ccc;
+  border: 1px solid;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right: 1rem;
+}
+.banderas button {
+  border: none;
+  cursor: pointer;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  width: 30px;
+  margin-left: 10px;
+}
+
+.banderas button img {
+  width: 100%;
+}
+
+.banderas1 button {
+  border: none;
+  cursor: pointer;
+  background: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  width: 30px;
+  margin-left: 10px;
+}
+
+.banderas1 button img {
+  width: 100%;
 }
 
 .mail-icon + span {
@@ -104,8 +137,11 @@ nav li {
 }
 
 nav a {
-  color: #fff;
   font-size: 0.86rem;
+}
+nav ul li a {
+  font-size: 0.86rem;
+  color: inherit;
 }
 
 nav label {
@@ -129,7 +165,9 @@ nav label {
 .hero-img {
   border-radius: 50%;
   margin-bottom: 1.2rem;
-  box-shadow: 6px 6px 18px rgba(0, 0, 0, 0.2),
+  /* box-shadow: 6px 6px 18px rgba(0, 0, 0, 0.2),
+    -6px -6px 18px rgba(255, 255, 255, 0.8); */
+    box-shadow: 6px 6px 18px rgba(0, 0, 0, 0.8),
     -6px -6px 18px rgba(255, 255, 255, 0.8);
 }
 
@@ -145,28 +183,24 @@ nav label {
   margin-bottom: 1.4rem;
   line-height: 4.2rem;
   font-weight: 700;
-  color: #fff;
 }
 
 .hero-content p {
   font-size: 1.3rem;
   margin-bottom: 0.5rem;
-  color: #fff;
 }
 
 .connect-btn {
   margin-top: 1.8rem;
-  color: #fff;
 }
 
 .connect-btn a {
   font-size: 1.1rem;
   background: var(--color-main);
-  color: #fff;
   padding: 1rem 3rem;
   border-radius: 30px;
   display: inline-block;
-  color: #fff;
+  color: inherit;
 }
 
 .tech-stack {
@@ -177,13 +211,11 @@ nav label {
 .works h3 {
   margin-bottom: 1.7rem;
   font-size: 1.3rem;
-  color: #fff;
 }
 
 .tech-stack h2 {
   font-size: 2rem;
   margin-bottom: 2rem;
-  color: #fff;
 }
 
 .skill-wrapper {
@@ -191,7 +223,8 @@ nav label {
   flex-wrap: wrap;
   justify-content: space-between;
   padding-top: 25px;
-  gap: 3.6rem;}
+  gap: 3.6rem;
+}
 
 .skill {
   display: flex;
@@ -203,7 +236,6 @@ nav label {
 .skill small {
   display: inline-block;
   font-weight: 600;
-  color: #fff;
 }
 
 .skill img {
@@ -220,7 +252,6 @@ nav label {
 
 .works {
   padding: 3rem 0rem 1rem 0rem;
-  background: black;
 }
 
 .work-grid {
@@ -233,20 +264,17 @@ nav label {
 }
 
 .work-info h2 {
-  color: white;
   font-size: 1.2rem;
   margin-bottom: 0.6rem;
 }
 
 .work-info p {
-  color: white;
   line-height: 1.8rem;
   text-align: justify;
 }
 
 .work-tech {
   margin-top: 1rem;
-  color: white;
 }
 
 .work-tech span {
@@ -270,7 +298,9 @@ nav label {
   font-size: 0.85rem;
   font-weight: bold;
   transition: background 200ms;
-  color: white;
+  color: inherit;
+  border: 1px solid;
+  color: inherit;
 }
 
 .work-btn a:hover {
@@ -283,12 +313,10 @@ nav label {
 }
 
 .contact-me h3 {
-  color: #4a4a4a;
   margin-bottom: 0.2rem;
 }
 
 .contact-me h3 + small {
-  color: #fff;
   font-weight: 600;
   font-size: 1rem;
 }
@@ -299,7 +327,6 @@ nav label {
 
 .contact-info h3 {
   margin-bottom: 1.2rem;
-  color: #fff;
 }
 
 .contact-info-grid {
@@ -309,21 +336,19 @@ nav label {
 .contact-icon {
   height: 50px;
   width: 50px;
-  background: white;
   display: grid;
   justify-content: center;
   align-items: center;
   border-radius: 50% 10px 50% 50%;
   margin-right: 1rem;
   margin-bottom: 3.5rem;
+  border: 1px solid;
 }
 .contact-icon span {
-  background: white;
 }
 
 .contact-info-grid small {
   font-weight: 600;
-  color: #fff;
   display: inline-block;
   margin-bottom: 0.4rem;
   font-size: 1rem;
@@ -331,7 +356,6 @@ nav label {
 
 .contact-info-grid h2 {
   font-weight: 100;
-  color: #fff;
 }
 
 .social-contact {
@@ -344,7 +368,7 @@ nav label {
 .social-contact a {
   margin-right: 1rem;
   font-size: 1.3rem;
-  color: #fff;
+  color: inherit;
 }
 
 .contact-form-wrapper {
@@ -360,14 +384,13 @@ nav label {
   display: block;
   text-align: left;
   text-transform: uppercase;
-  color: white;
   font-size: 0.8rem;
   font-weight: bold;
 }
 
 .form-wrapper input,
 .form-wrapper textarea {
-  border: 1px solid #ccc;
+  border: 1px solid;
   border-radius: 5px;
   resize: none;
   width: 100%;
@@ -378,7 +401,7 @@ nav label {
 
 .form-wrapper input:focus,
 .form-wrapper textarea:focus {
-  border: 1px solid var(--second-color);
+  border: 1px solid;
 }
 
 .form-wrapper input[type="email"] {
@@ -387,7 +410,6 @@ nav label {
   height: 40px;
 }
 .contact-form h3 {
-  color: white;
 }
 
 .contact-form-wrapper button {
@@ -402,21 +424,21 @@ nav label {
 /* Mobile menu */
 .mobile-menu {
   width: 100%;
-  background: rgba(0, 0, 0, 0.3);
   position: fixed;
   right: -100%;
   top: 0;
   height: 100%;
   z-index: 100;
   transition: right 500ms;
+  background: inherit;
 }
 
 .menu-wrapper {
   height: 100%;
   width: 70%;
   margin-left: auto;
-  background: black;
   padding: 1rem 2rem;
+  background: inherit;
 }
 
 .aside-header {
@@ -428,12 +450,11 @@ nav label {
 
 .socials-menu a {
   margin-right: 0.7rem;
-  color: #fff;
+  color: inherit;
 }
 
 .aside-header label {
   font-size: 1.5rem;
-  color: #fff;
 }
 
 .aside-content li {
@@ -442,20 +463,16 @@ nav label {
 
 .aside-content li a {
   font-size: 1.4rem;
-  color: #fff;
+  color: inherit;
 }
 
 .aside-content li:first-child a {
-  color: var(--color-main);
 }
-
-
 
 form {
   flex: 1 1 42rem;
 }
 form p {
-  color: white;
   font-size: 25px;
 }
 form .inputBox {
@@ -466,14 +483,16 @@ form .inputBox {
 form .inputBox input {
   width: 49%;
 }
-form .inputBox input, form textarea {
+form .inputBox input,
+form textarea {
   border-radius: 5rem;
   padding: 1rem 1rem;
   font-size: 1rem;
-  color: white;
+  color: inherit;
   text-transform: none;
   margin: 0.7rem 0;
-  background: light-bg;
+  background: inherit;
+  border: 1px solid;
 }
 form textarea {
   width: 100%;
@@ -486,10 +505,8 @@ form .btn {
   cursor: pointer;
 }
 form .btn:hover {
-  background: white;
   color: black;
 }
-
 
 @media only screen and (max-width: 1024px) {
   .work-grid {
@@ -517,7 +534,9 @@ form .btn:hover {
   nav label {
     display: inline-block;
   }
-
+  .banderas {
+    display: none;
+  }
   #menu-toggle:checked + .mobile-menu {
     right: 0%;
   }
@@ -567,8 +586,10 @@ form .btn:hover {
     text-align: center;
   }
 
-.contact-info-grid h2 {
-
-  font-size: 0.9rem;
-}
+  .contact-info-grid h2 {
+    font-size: 0.9rem;
+  }
+  .banderas {
+    display: none;
+  }
 }
